src/test/resources/invalid_tests/WrongArgument.cnna
architecture WrongArgument(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in
    def output Q(0:1)^{classes} out

    in ->
    FullyConnected(units=64, bias=true) ->
    Tanh(asd=1) ->
    FullyConnected(unit=classes) ->
    Softmax() ->
    out
}